# emdb_cognitive_nodes_gii

./: README.md
cognitive_node_interfaces/: CMakeLists.txt  package.xml
cognitive_node_interfaces/msg/: Action.msg  Activation.msg  Actuation.msg  Episode.msg  EpisodeMsg.msg  Evaluation.msg  ObjectLayout.msg  ObjectParameters.msg  Perception.msg  PerceptionStamped.msg  SuccessRate.msg
cognitive_node_interfaces/srv/: Action.srv  AddNeighbor.srv  AddPoints.srv  AddTrace.srv  ContainsSpace.srv  DeleteNeighbor.srv  Evaluate.srv  Execute.srv  GetEffects.srv  GetIteration.srv  GetKnowledge.srv  GetReward.srv  GetSatisfaction.srv  IsReached.srv  IsSatisfied.srv  Policy.srv  PolicyParametrized.srv  Predict.srv  PredictUtility.srv  SendPNodeSpace.srv  SetInputs.srv  SetWeight.srv
cognitive_nodes/: setup.py
cognitive_nodes/cognitive_nodes/: alignment.py  cnode.py  deliberative_model.py  drive.py  drive_exponential.py  drive_lineal.py  effectance.py  episode.py  episodic_buffer.py  generic_model.py  goal.py  llm_exploration.py  model_creation.py  need.py  novelty.py  perception.py  pnode.py  policy.py  prospection.py  robot_purpose.py  space.py  utility_model.py  utils.py  world_model.py
cognitive_nodes/config/: prompts.yaml
docs/source/: conf.py  index.md  index.rst
docs/source/cognitive_nodes/: api_documentation.rst  as_api_documentation.rst  cn_api_documentation.rst  cnode.rst  drive.rst  drive_exponential.rst  drive_lineal.rst  goal.rst  im_api_documentation.rst  need.rst  perception.rst  pnode.rst  policy.rst  space.rst  utility_model.rst  world_model.rst
docs/source/concepts/: concepts.md  intrinsic_motivations.md
